# OPTBOTSPORTS

./: .gitattributes  .gitignore  ARCHITECTURE.md  MIGRATION_MAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: ADR-001_fingerprint_elimination.md  ARCHITECTURE_PLAN.md  AUDITOR_GUIDE.html  DATA_STEWARD_CHARTER.html  HANDOFF.html  PHASES_EXPLAINED.html  PHASE_A_FEATURES.md  PHASE_A_PAPER.html  cin_paper.tex  make_whitepaper_pdf.py  phase_a_paper.tex  status_paper.tex
optbot/backtest/: harness.py
optbot/baselines/: marcel.py
optbot/cin/: conformal.py  project.py  scenario.py  support.py
optbot/contracts/: tower_schema.py  window_schema.py
optbot/data/: ledger.py  lines.py  (+2 more)
scripts/: 00_validate_data.py  00b_fix_spine_dupes.py  00c_rebuild_actuals.py  01_build_ledger.py  02_build_talent_prior.py  02b_build_lines_and_windows.py  02c_extract_people_and_outcomes.py  02d_join_perfect_v2.py  03_run_baselines.py  04_project_trades.py  05_backtest.py  06_seal_predictions.py  07_certify_all_seasons.py  08_penalty_economy.py  09_groundtruth_audit.py  10_crownjewel_season_audit.py  11_zone_context_audit.py  12_longwindow_event_audit.py  13_lag_symmetry_audit.py  14_mp_attach_shots.py  15_shot_profiles.py  16_assemble_v3.py  18_final_backtest.py  20_build_shells.py  21_build_trainer_surface.py  21a_build_player_bio.py  21b_complete_coach_2025.py  22_pull_win_totals.py  23_normalize_game_odds.py  24_surface_lag_audit.py  25_surface_deep_audit.py  run_final_chain.ps1  run_mp_attach_all.ps1  run_v3_chain.ps1
tests/: test_contracts.py
(+7 files in other folders)
