[project]
name = "optbot"
version = "0.1.0"
description = "OptBot Portability CIN — project NHL players into new contexts before they play there"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14",
    "pyyaml>=6",
]

[project.optional-dependencies]
ml = ["torch>=2.2", "lightgbm>=4.3"]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["optbot*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
